--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,21 +1,27 @@
 body {
   font-family: Arial;
+  font-size: 18px;
   /* display: flex;
   justify-content: center; */
 }
 
 .container {
   width: 400px;
-  height: 600px;
+  max-height: 600px;
   display: flex;
   flex-direction: column;
   text-align: center;
   padding: 10px;
-  /* border: 1px solid; */
+  border: 1px solid;
 }
 
 .homeButtons {
   margin-top: 10px;
   display: flex;
   flex-direction: column;
+}
+
+.formFooter {
+  display: flex;
+  justify-content: space-between
 }
