--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
   text-align: center;
   padding: 10px;
-  border: 1px solid;
+  /* border: 1px solid; */
 }
 
 .homeButtons {
