--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial;
+  font-family: Arial, Helvetica, sans-serif;
   /* font-size: 18px; */
   /* display: flex;
   justify-content: center; */
