Login and logout properly completed. Vault related functions implemented

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,7 @@ body {
   flex-direction: column;
 }
 
-.formFooter {
+.footer {
   margin-top: 10px;
   display: flex;
   justify-content: space-between
