--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,8 @@ body {
 }
 
 .container {
-  width: 400px;
-  max-height: 600px;
+  width: 500px;
+  height: 600px;
   display: flex;
   flex-direction: column;
   text-align: center;
