--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,13 @@ body {
   position: relative;
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
 .homeButtons {
   margin-top: 10px;
   display: flex;
@@ -22,6 +29,10 @@ body {
 .footer {
   display: flex;
   justify-content: space-between;
+}
+
+.signUp {
+  flex-grow: 1;
 }
 
 .inputFields {
